# psa_car_controller

./: .coveragerc  .eslintrc.yml  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  Car.py  ChargeControl.py  Dockerfile  FAQ.md  MyLogger.py  MyPSACC.py  README.md  Trip.py  Trips.py  api_spec.md  app_decoder.py  charge_control.py  config.ini  docker-compose.yml  ecomix.py  local-build.txt  my_psacc.py  mylogger.py  psa-car-controller.service  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  trip.py  trip_parser.py  utils.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  can-t-get-car-model.md
.github/workflows/: Docker_build.yml  main.yml  release.yml  test.yml
docker_files/: dockerconfig.conf  init.sh
docs/: Adas.md  AdasParkAssist.md  Alert.md  AlertEndPosition.md  AlertLinks.md  AlertMsgEnum.md  Alerts.md  AlertsEmbedded.md  Battery.md  BoundedProgram.md  ChargingStatusEnum.md  CircleZone.md  CircleZoneCoordinates.md  CollectionResult.md  Collision.md  CollisionLinks.md  CollisionObj.md  CollisionObjFront.md  Collisions.md  CollisionsEmbedded.md  CreatedAtField.md  DataMonitorTrigger.md  DataTrigger.md  DefaultAlertPush.md  DefaultAlertPushAttributes.md  Develop.md  Docker.md  DoorsState.md  DoorsStateOpening.md  ECoaching.md  ECoachingLinks.md  ECoachingScores.md  Energy.md  Engine.md  EngineOil.md  Environment.md  EnvironmentLuminosity.md  Event.md  EventLinks.md  Extension.md  (+96 more)
docs/api/: Adas.md  AdasParkAssist.md  Alert.md  AlertEndPosition.md  AlertLinks.md  AlertMsgEnum.md  Alerts.md  AlertsEmbedded.md  Battery.md  BoundedProgram.md  ChargingStatusEnum.md  CircleZone.md  CircleZoneCoordinates.md  CollectionResult.md  Collision.md  CollisionLinks.md  CollisionObj.md  CollisionObjFront.md  Collisions.md  CollisionsEmbedded.md  CreatedAtField.md  DataMonitorTrigger.md  DataTrigger.md  DefaultAlertPush.md  DefaultAlertPushAttributes.md  DoorsState.md  DoorsStateOpening.md  ECoaching.md  ECoachingLinks.md  ECoachingScores.md  Energy.md  Engine.md  EngineOil.md  Environment.md  EnvironmentLuminosity.md  Event.md  EventLinks.md  Extension.md  ExtensionType.md  Geometry.md  (+89 more)
docs/domoticz/: Domoticz.md
libs/: car.py  car_model.py  car_status.py  charging.py  config.py  elec_price.py  oauth.py  psa_constants.py  requirements.py  utils.py
libs/psa/: AccountInformation.py  RemoteClient.py  RemoteCredentials.py  constants.py  mqtt_request.py  oauth.py
otp/: Otp.py  Tokenizer.py  __init__.py  load.py  oaep.py  otp.py
psa-car-controller/: __main__.py
psa-car-controller/common/: mylogger.py  utils.py
psa-car-controller/psa/: AccountInformation.py  RemoteClient.py  constants.py  mqtt_request.py  oauth.py
psa-car-controller/web/: app.py  dash_custom.py  figures.py
psa_car_controller/: __init__.py  __main__.py
psa_car_controller/common/: mylogger.py  utils.py
psa_car_controller/psa/: AccountInformation.py  RemoteClient.py  constants.py  mqtt_request.py  (+1 more)
psa_connectedcar/: __init__.py  api_client.py  configuration.py  rest.py
test/: test_config.py  test_front.py  test_unit.py  utils.py
tests/: test_BatteryChargeCurve.py  test_chargecontrol.py  test_config.py  test_db.py  test_ha_ingress_integration.py  test_psa.py  test_unit.py  utils.py
web/: abrp.py  app.py  callback.py  config_views.py  dash_custom.py  db.py  figure_filter.py  figurefilter.py  figures.py  utils.py  views.py
(+244 files in other folders)
